# 001AIbiancfuzhuxiangmu

./: .gitignore  README.md
.github/workflows/: ci.yml
ai_completion/: config.json
bio_sim/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
bio_sim/.github/workflows/: build.yml  code-quality.yml  test.yml
bio_sim/core/: __init__.py  entity.py  simulation_base.py
bio_sim/docs/: DOCKER_GUIDE.md  PHASE1_DETAILED_PLAN.md  PLANNING_OVERVIEW.md  PROJECT_SUMMARY.md  QUICKSTART.md  TASK_TRACKER.md
bio_sim/scripts/: dev.sh  run_tests.sh
bio_sim/simulations/: __init__.py  boids.py  ecosystem.py  game_of_life.py  genetic_algorithm.py
bio_sim/tests/: __init__.py  test_boids.py  test_ecosystem.py  test_game_of_life.py  test_genetic.py  test_simulation_base.py
bio_sim/utils/: __init__.py  config.py  logger.py
bio_sim/visualizers/: __init__.py  pygame_visualizer.py
claude-code-project-config/: README.md
claude-code-project-config/projects/: ai-support-group-CLAUDE.md  ai-support-group-CODEMAP.md  image-gen-saas-CLAUDE.md  image-gen-saas-CODEMAP.md  quant-engine-CLAUDE.md  quant-engine-CODEMAP.md  tishiciyouhua-repo-CLAUDE.md  tishiciyouhua-repo-CODEMAP.md  type-master-CLAUDE.md  type-master-CODEMAP.md
claude-code-project-config/rules/: README.md  ai-support-group.md  image-gen-saas.md  quant-engine.md  tishiciyouhua.md  type-master.md
claude-code-project-config/skills/new-api-route/: SKILL.md
claude-code-project-config/skills/new-electron-feature/: SKILL.md
claude-code-project-config/skills/new-image-gen-feature/: SKILL.md
claude-code-project-config/skills/new-quant-strategy/: SKILL.md
codebuddy/20250825181611/: README.md  package-lock.json  package.json
codebuddy/20250825181611/src/: converter.js  index.js  test.js  utils.js  vectorizer.js
codebuddy/个人教育/: package.json
explorer-agent/: ARCHITECTURE.md  AUTOMATION_GUIDE.md  PROJECT_SPEC.md  README.md  SETUP_GUIDE.md  add_fresh_seeds.py  automated_exploration.py  comprehensive_evaluation.py  docker-compose.yml  gitignore.txt  setup_scheduled_task.py  show_api_config.py  start.bat  start.sh  test_direct_search.py  test_multi_step_exploration.py  test_qwen_api.py  test_search_capability.py  test_single_exploration.py  test_thinker.py  搜索能力验证报告.md
explorer-agent/backend/: .env  .env.example  Dockerfile  alembic.ini  manage_api.py  requirements.txt
explorer-agent/backend/alembic/: env.py
explorer-agent/backend/alembic/versions/: 001_initial.py  002_add_thinker_tables.py  003_add_organizer_outputter_tables.py
explorer-agent/backend/app/: __init__.py  main.py
explorer-agent/backend/app/agents/: __init__.py
explorer-agent/backend/app/ai_models/: api_library.py  library.py
explorer-agent/backend/app/core/: config.py
explorer-agent/backend/app/db/: __init__.py  (+3 more)
explorer-agent/backend/tests/: test_full_cycle_v2.py
explorer-agent/docs/: COMPLETE_AGENT_SYSTEM.md  IMPLEMENTATION_GUIDE.md  RPD_1.02.md  RPD_2.0.md  TECHNICAL_DESIGN.md
explorer-agent/frontend/: Dockerfile  app.py
explorer-agent/reports/: daily_report_20251227_224159.json  daily_report_20251227_224159.md  daily_report_20251231_160842.json  daily_report_20251231_160842.md
explorer-agent/specs/ai-evaluator/: design.md  requirements.md  tasks.md
explorer-agent/specs/data-sources/: design.md  requirements.md  tasks.md
explorer-agent/specs/exploration-engine/: design.md  requirements.md  tasks.md
explorer-agent/specs/web-ui/: design.md  requirements.md  tasks.md
(+39 files in other folders)
